# AutoTraderDemo

./: README.md  auto_trader.ipynb  main.py  pyproject.toml
src/ai_trader/: SimpleMLStrategy.py  data_grabber.py  evaluation.py  indicators.py  plotting.py
src/ai_trader/strategies/: MLP.py  base_strategies.py  logic_regression.py  random_forest.py
