[build-system]
requires = ["uv-build>=0.2"]
build-backend = "uv_build"

[project]
name = "ai_trader"
version = "0.1.0"
description = "A demonstration Jupyter notebook that showcases how AI models can analyze stock market data, detect patterns, and build a simple educational trading-bot workflow."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "yfinance",
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "jupyter",
    "pyarrow"
]